<resources>
    <string name="app_name">LoginApp</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>

    <string name="user_does_not_exist">User does not exist. Please sign up.</string>
    <string name="user_registered_successfully">User registered successfully.</string>
    <string name="user_could_not_be_added">User could not be added this time.</string>
    <string name="user_info_could_not_be_loaded">User information could not be loaded.</string>
    <string name="press_log_out_button">Press log out button to go back to log in screen.</string>

    <string name="first_name_register">First Name</string>
    <string name="last_name_register">Last Name</string>
    <string name="email_register">Email</string>

    <string name="full_name_profile">Full Name</string>
    <string name="email_profile">Email</string>
    <string name="user_id_profile">User Id</string>

    <string name="name_form">Name:</string>
    <string name="email_form">Email:</string>
    <string name="username_form">Username:</string>
    <string name="password_form">Password</string>

    <string name="first_name_error_message">First name cannot be empty and must have a maximum length of 50.</string>
    <string name="last_name_error_message">Last name cannot be empty and must have a maximum length of 50.</string>
    <string name="email_error_message">Please add a valid email format.</string>
    <string name="user_name_error_message">Username cannot be empty and must have a minimum length of 10.</string>
    <string name="password_error_message">Password cannot be empty and must have a minimum length of 12.</string>
</resources>