<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/register_padding"
    tools:context=".view.RegisterFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_12"
        android:text="@string/name_form"/>
    <TextView
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_margin_bottom"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_30"
        tools:text="Miguel Saavedra Lozano" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_12"
        android:text="@string/email_form"/>
    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_margin_bottom"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_20"
        tools:text="mike@gmail.com"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_12"
        android:text="@string/username_form"/>
    <TextView
        android:id="@+id/user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/register_margin_bottom"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_20"
        tools:text="mikeescom"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_12"
        android:text="@string/password_form"/>
    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_20"
        android:inputType="textPassword"
        tools:text="pasword"/>

</LinearLayout>